Edit Paragraph color

--- a/styles.css
+++ b/styles.css
@@ -32,5 +32,5 @@ body {
 .card .info p {
     font-size: 16px;
     margin-bottom: 20px;
-    color: hsl(220, 15%, 55%);
+    color: hsl(220deg 18.84% 48.21%);
 }
